# streamline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  settings.ini  settings.ini.example  settings.toml
.github/workflows/: ci.yaml  coverage.yaml  python-app.yml  streamline-ci.yml  tests.yaml
docker/: Dockerfile
docker/grafana/dashboards/: Engineering-metrics-1.0.json  Engineering-metrics-1.1.json  Workflow_Performance.json  flow-metrics-1.0.json  flow-metrics-1.1.json  flow-metrics-1.2.json  flow-metrics-1.3.json  workflow_performance.json
docker/mongo/: mongod.conf  mongosh.conf
docs/: Metrics.md
src/: main.py
src/rebelist/streamline/application/compute/: __init__.py  services.py
src/rebelist/streamline/application/compute/use_cases/: __init__.py  flow.py
src/rebelist/streamline/application/ingestion/jobs/: __init__.py  models.py  workflow.py
src/rebelist/streamline/config/: container.py  settings.py
src/rebelist/streamline/domain/metrics/flow/: __init__.py  calculators.py
src/rebelist/streamline/domain/sprint/: __init__.py  models.py  repository.py
src/rebelist/streamline/domain/ticket/: __init__.py  repository.py
src/rebelist/streamline/domain/time/: __init__.py
src/rebelist/streamline/handlers/api/: __init__.py  main.py
src/rebelist/streamline/handlers/api/metrics/: __init__.py  flow.py  models.py
src/rebelist/streamline/handlers/cli/: __init__.py  console.py
src/rebelist/streamline/handlers/cli/commands/: __init__.py  command.py  database_clear.py  database_index.py  database_synchronize.py
src/rebelist/streamline/infrastructure/datetime/: __init__.py  normalizer.py
src/rebelist/streamline/infrastructure/jira/: __init__.py  gateway.py
src/rebelist/streamline/infrastructure/mongo/job/: __init__.py
src/rebelist/streamline/infrastructure/mongo/sprint/: __init__.py  repositories.py
src/rebelist/streamline/infrastructure/mongo/ticket/: __init__.py  repositories.py
src/rebelist/streamline/infrastructure/monitoring/: __init__.py  logger.py
src/streamline/: __init__.py
src/streamline/application/compute/: __init__.py  models.py  services.py
src/streamline/application/compute/use_cases/: __init__.py  flow.py  performance.py
src/streamline/application/ingestion/jobs/: __init__.py  workflow.py
src/streamline/config/: __init__.py  container.py  settings.py
src/streamline/config/dependencies/: __init__.py  services.py
src/streamline/domain/metrics/flow/: __init__.py  calculators.py
src/streamline/domain/metrics/performance/: __init__.py  cycle_time.py
src/streamline/domain/metrics/workflow/: __init__.py  calculators.py
src/streamline/domain/services/: __init__.py  calendar.py
src/streamline/domain/sprint/: __init__.py  models.py  repository.py
src/streamline/domain/ticket/: __init__.py  models.py  repository.py
src/streamline/domain/time/: __init__.py  calculator.py
src/streamline/handlers/api/: __init__.py  main.py
src/streamline/handlers/api/metrics/: __init__.py  flow.py  models.py
src/streamline/handlers/api/v1/: metrics.py  models.py
src/streamline/handlers/cli/: __init__.py  console.py
src/streamline/handlers/cli/commands/: __init__.py  clear.py  command.py  database_clear.py  database_index.py  database_synchronize.py  synchronizer.py
src/streamline/infrastructure/jira/: __init__.py  gateway.py  repositories.py
src/streamline/infrastructure/mongo/jira_sprint/: __init__.py  repositories.py
src/streamline/infrastructure/mongo/jira_ticket/: __init__.py  repositories.py
src/streamline/infrastructure/mongo/job/: __init__.py  repositories.py
src/streamline/infrastructure/mongo/sprint/: __init__.py  repositories.py
src/streamline/infrastructure/mongo/ticket/: __init__.py  repositories.py
src/streamline/infrastructure/monitoring/: __init__.py
tests/: conftest.py
tests/application/compute/: models_test.py  services_test.py  test_models.py  test_services.py
tests/application/compute/use_cases/: flow_test.py  performance_test.py  test_flow.py
tests/application/ingestion/jobs/: test_workflow.py  workflow_test.py
tests/config/: settings_test.py  test_settings.py
tests/domain/metrics/performance/: cycle_time_test.py
tests/domain/metrics/workflow/: calculators_test.py  test_calculators.py
tests/domain/services/: calendar_test.py  test_calendar.py
tests/domain/spirint/: models_test.py
tests/domain/sprint/: models_test.py  test_models.py
tests/domain/ticket/: models_test.py  test_models.py
tests/handlers/api/: main_test.py  metrics_test.py  models_test.py  test_models.py
tests/handlers/api/metrics/: flow_test.py  test_flow.py
tests/handlers/api/v1/: metrics_test.py  models_test.py
tests/handlers/cli/: console_test.py  test_console.py
tests/handlers/cli/commands/: clear_test.py  database_clear_test.py  database_index_test.py  database_synchronize_test.py  synchronizer_test.py  test_database_clear.py  test_database_index.py  test_database_synchronize.py
tests/infrastructure/: conftest.py
tests/infrastructure/datetime/: test_normalizer.py
tests/infrastructure/jira/: gateway_test.py  repositories_test.py  test_gateway.py
tests/infrastructure/mongo/job/: test_repositories.py
tests/infrastructure/mongo/sprint/: repositories_test.py  test_repositories.py
tests/infrastructure/mongo/ticket/: repositories_test.py  test_repositories.py
tests/infrastructure/monitoring/: test_logger.py
